--- a/index.html
+++ b/index.html
@@ -932,38 +932,17 @@
                             <div class="speaker-with-bio">
                                 <div class="speaker">
                                     <div class="image-holder">
-                                        <img class="background-image" alt="Mario Parade" src="img/MarioParade.jpg">
+                                        <img class="background-image" alt="Alessandro" src="img/AlessandroVolpato.jpg">
                                         <div class="hover-state text-center preserve3d">
                                             <div class="social-links vertical-align">
-                                                <a href="http://www.wissenschaftsladen-potsdam.de" target="_self"><i class="icon fa fa-external-link"></i></a>
+                                                <a href="http://toplab.de" target="_self"><i class="icon fa fa-external-link"></i></a>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="speaker-description">
-                                    <h2>Mario Parade</h2>
-                                    <span class="sub">Fablab Potsdam</span>
-                                </div>
-                            </div>
-                        </div>
-
-
-			<div class="col-md-6 col-sm-12">
-                            <div class="speaker-with-bio">
-                                <div class="speaker">
-                                    <div class="image-holder">
-                                        <img class="background-image" alt="Björn Huwe" src="img/BjörnHuwe.jpg">
-                                        <div class="hover-state text-center preserve3d">
-                                            <div class="social-links vertical-align">
-                                                <a href="https://www.wissenschaftsladen-potsdam.de" target="default"><i class="icon fa fa-external-link"></i></a>
-                                                <a href="https://twitter.com/opntec" target="default"><i class="icon social_twitter"></i></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="speaker-description">
-                                    <h2>Björn Huwe</h2>
-                                    <span class="sub">Wissenschaftsladen Potsdam</span>
+                                    <h2>Alessandro Volpato</h2>
+                                    <span class="sub">Biohacker</span>
                                 </div>
                             </div>
                         </div>
