--- a/index.html
+++ b/index.html
@@ -529,9 +529,14 @@
 
         <section class="image-with-text testimonials preserve-3d">
 
+            <div class="go-left side-image col-md-6 col-sm-4">
+                <div class="background-image-holder">
+                    <img class="background-image" alt="About Image" src="img/vuejs.jpg">
+                </div>
+            </div>
             <div class="container vertical-align">
                 <div class="row">
-                    <div class="col-md-5 col-sm-7">
+                    <div class="col-md-5 col-md-offset-7 col-sm-7 col-sm-offset-5">
                         <div class="testimonials-slider">
                             <ul class="slides">
                                 <li>
@@ -545,9 +550,31 @@
                     </div>
                 </div>
             </div>
+        </section>
+
+        <a id="meetups" class="in-page-link"></a>
+
+        <section class="image-with-text testimonials preserve-3d">
+
+            <div class="container vertical-align">
+                <div class="row">
+                    <div class="col-md-5 col-sm-7">
+                        <div class="testimonials-slider">
+                            <ul class="slides">
+                                <li>
+                                    <h1>Mittwoch, 9. Mai: Toplab</h1>
+                                    <p class="lead">On May 9th, we invite everyone to experience TopLab through an exhibition of the current science projects and art pieces. Throughout the exhibition, we encourage thoughtful examination and interactive discussion of the ethical and society implications surrounding biotechnology. The exhibition takes place May 9th, 3:00 - 7:00 pm, at TopLab, Schillerpromenade 4, Neukölln. The entry is free of charge (donations are welcome).</p>
+                                    <a href="http://www.top-ev.de" class="btn" target="_self">Mehr Info</a>
+                                 <!--   <a href="./schedule/" class="btn btn-hollow" target="_self">Programm</a> -->
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="go-right side-image col-md-6 col-sm-4">
                 <div class="background-image-holder">
-                    <img class="background-image" alt="About Image" src="img/vuejs.jpg">
+                    <img class="background-image" alt="About Image" src="img/toplab-alice-morey.jpg">
                 </div>
             </div>
         </section>
