--- a/index.html
+++ b/index.html
@@ -703,9 +703,10 @@
                         </div>
                     </div>
 						<div class="col-sm-6 col-md-5">
-							<h1>Samstag, 12. Mai, Coderdojo für Kinder und Jugendliche im Hasso-Plattner-Institut Potsdam</h1>
+							<h1>Samstag, 12. Mai, 14:00 - 17:00, Coderdojo für Kinder und Jugendliche in Berlin und Potsdam</h1>
 							<p class="lead">CoderDojo ist ein Club für Kinder und Jugendliche im Alter von 5 bis 17 Jahren, die Programmieren lernen und Spaß haben wollen. Freiwillige Mentor_innen helfen den Kindern, ihre Ideen umzusetzen. Dabei lernen sie spielerisch die Grundlagen des Programmierens.<br></p>
-							<a href="http://coderdojopotsdam.github.io/" class="btn" target="_self">Mehr Info</a>
+							<a href="https://zen.coderdojo.com/dojos/de/berlin/dojo-berlin-friedrichshain" class="btn" target="_self">Berlin</a>
+							<a href="http://coderdojopotsdam.github.io/" class="btn" target="_self">Potsdam</a>
 						</div>
                     </div>
 
