--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
 								<li>
 									<div class="schedule-title">
 										<span class="time">9. Mai, Mittwoch</span>
-										<span class="title">15:00 - 19:30 Workshops</span>
+										<span class="title">16:30 - 19:30 Workshops</span>
 										<span class="title">Ort: Toplab in Berlin Neukölln </span>										
 									</div>
 									
@@ -563,8 +563,8 @@
                             <ul class="slides">
                                 <li>
                                     <h1>Mittwoch, 9. Mai: Toplab</h1>
-                                    <p class="lead">On May 9th, we invite everyone to experience TopLab through an exhibition of the current science projects and art pieces. Throughout the exhibition, we encourage thoughtful examination and interactive discussion of the ethical and society implications surrounding biotechnology. The exhibition takes place May 9th, 3:00 - 7:30 pm, at TopLab, Schillerpromenade 4, Neukölln. The entry is free of charge (donations are welcome).</p>
-                                    <a href="http://www.top-ev.de" class="btn" target="_self">Mehr Info</a>
+                                    <p class="lead">On May 9th, we invite everyone to experience TopLab through an exhibition of the current science projects and art pieces. Throughout the exhibition, we encourage thoughtful examination and interactive discussion of the ethical and society implications surrounding biotechnology. The exhibition takes place May 9th, 16:30 - 19:30, at TopLab, Schillerpromenade 4, Neukölln. The entry is free of charge (donations are welcome).</p>
+                                    <a href="http://www.top-ev.de/biolab/open-tech-summit-festival-at-toplab/" class="btn" target="_self">Mehr Info</a>
                                  <!--   <a href="./schedule/" class="btn btn-hollow" target="_self">Programm</a> -->
                                 </li>
                             </ul>
