Add a honeypot field. This solves issue #5 (#10)

--- a/index.html
+++ b/index.html
@@ -1037,10 +1037,14 @@
                 </div>
                 <div class="col-sm-5 email">
                   <input class="form-email signup-email-field" placeholder="Enter your email address" type="text" name="email" id="email" required>
+				</div>
+                <div class="col-sm-4 name" style="display:none;">
+                  <input class="form-email signup-email-field" placeholder="HP" type="text" name="hp" id="hp">
                 </div>
-                <div class="col-sm-3 submit-btn">
-                  <input class="btn" value="Subscribe" type="submit" name="submit" id="submit">
+				<div class="col-sm-3 submit-btn">
                   <input type="hidden" name="list" value="BcHvIbF1EcrysE892l892nMiKg">
+                  <input type="hidden" name="subform" value="yes">
+                  <input class="btn" value="Subscribe" type="submit" name="submit" id="submit">
                 </div>
                 <div class="col-sm-12 text-center">
                   <span>*Wir teilen Ihre Daten nicht mit anderen.</span>
