--- a/index.html
+++ b/index.html
@@ -54,7 +54,17 @@
 								<ul class="menu">
 									<li><a class="inner-link" href="#top" target="_self">Home</a></li>
 									<li><a href="./tickets/" target="_self">Tickets</a></li>
-									<li><a class="inner-link" href="#team" target="_self">Team&nbsp;</a></li> 
+									<li class="has-dropdown"><a href="#">Schedule</a>
+										<ul class="nav-dropdown" style="min-height: 330px">
+										<!--	<li><a href="./event" target="_self">Hauptveranstaltung / Main Event, Do.10.Mai</a></li> -->
+											<li><a class="inner-link" href="#vuejs" target="_self">8. Mai, Vue.Js Meetup</a></li>
+											<li><a class="inner-link" href="#toplab" target="_self">9. Mai, Toplab</a></li>
+											<li><a class="inner-link" href="#mainevent" target="_self">10. Mai, Vorträge, Talks & Presentations</a></li>
+											<li><a class="inner-link" href="#solar" target="_self">10. Mai, Solar Workshop</a></li>
+											<li><a class="inner-link" href="#pslab" target="_self">11. Mai, Open Hardware - Pocket Science Lab</a></li>
+											<li><a class="inner-link" href="#coderdojo" target="_self">12. Mai, Coderdojo Berlin/Potsdam</a></li>
+											<li><a class="inner-link" href="#brunch" target="_self">13. Mai, Open Tech Brunch</a></li>
+									</ul>
 									<li><a class="inner-link" href="#press" target="_self">Presse</a></li>
 									<li><a href="http://speakers.opentechsummit.net/coc" target="default">CoC</a></li>
 									<li><a class="inner-link" href="#newsletter" target="_self">Newsletter&nbsp;</a></li>
@@ -555,7 +565,7 @@
 					</div>
 			</section>
 
-        <a id="meetups" class="in-page-link"></a>
+        <a id="vuejs" class="in-page-link"></a>
 
         <section class="image-with-text testimonials preserve-3d">
 
@@ -582,7 +592,7 @@
             </div>
         </section>
 
-        <a id="meetups" class="in-page-link"></a>
+        <a id="toplab" class="in-page-link"></a>
 
         <section class="image-with-text testimonials preserve-3d">
 
@@ -609,7 +619,7 @@
             </div>
         </section>
 
-        <a id="himmelfahrt" class="in-page-link"></a>
+        <a id="mainevent" class="in-page-link"></a>
 
         <section class="image-with-text testimonials preserve-3d">
 
@@ -636,6 +646,8 @@
             </div>
         </section>
 
+        <a id="solar" class="in-page-link"></a>
+
         <section class="image-with-text testimonials preserve-3d">
 
             <div class="container vertical-align">
@@ -660,6 +672,8 @@
                 </div>
             </div>
         </section>
+
+        <a id="pslab" class="in-page-link"></a>
 
 			<section class="image-with-text background-dark preserve-3d">
 				
