--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									<li><a href="./tickets/" target="_self">Tickets</a></li>
 									<li class="has-dropdown"><a href="#">Schedule</a>
 										<ul class="nav-dropdown" style="min-height: 330px">
-										<!--	<li><a href="./event" target="_self">Hauptveranstaltung / Main Event, Do.10.Mai</a></li> -->
+											<li><a href="./event/schedule.html" target="_self">Hauptveranstaltung / Main Event, Do.10.Mai</a></li>
 											<li><a class="inner-link" href="#vuejs" target="_self">8. Mai, Vue.Js Meetup</a></li>
 											<li><a class="inner-link" href="#toplab" target="_self">9. Mai, Toplab</a></li>
 											<li><a class="inner-link" href="#mainevent" target="_self">10. Mai, Vorträge, Talks & Presentations</a></li>
