--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 								<ul class="menu">
 									<li><a class="inner-link" href="#top" target="_self">Home</a></li>
 									<li><a href="./tickets/" target="_self">Tickets</a></li>
-									<li class="has-dropdown"><a href="#schedule">Schedule/Programm</a>
+									<li class="has-dropdown"><a class="inner-link" href="#schedule">Schedule/Programm</a>
 										<ul class="nav-dropdown" style="min-height: 330px">
 											<li><a href="./event/schedule.html" target="_self">Hauptveranstaltung / Main Event, Do.10.Mai</a></li>
 											<li><a class="inner-link" href="#vuejs" target="_self">8. Mai, Vue.Js Meetup</a></li>
